@@ -1,4 +1,3 @@
-DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
-EBUILD selinux-acpi-2.20110726.ebuild 239 RMD160 6a9905533937939a4d520406eae8330e7f772e1f SHA1 7fb63849b6b19577dbe4a6d741d3c91255bf77af SHA256 0f1e8969c825824f908651150cce66f5ccbb61d78528cc9f4fa8897edd4f6a1f
-MISC ChangeLog 2260 RMD160 363c35d36916acc3b87d7f5d64c5895d1a837424 SHA1 3081c0dab2036f2a46b9ea49173078da3f4edc87 SHA256 901a784edda9d0f34370349c3e87c644d934969d57967420ee3e8bf316f92afa
+EBUILD selinux-acpi-2.20110726.ebuild 347 RMD160 cec6e17eb18d1cc64d59fa8f7b835884ff1a18de SHA1 17543fe4c46755707a5bf5758ebc2a32dbc81b43 SHA256 1fae42c17e321ef5bcfcbb3df3fa3cdc010fa596509ac42f4cb1842c19cddda9
+MISC ChangeLog 2378 RMD160 5e00e5aea2b9b180f5f35062cfd86779cd16cedb SHA1 b40627bb7d6100650ef835f73eae34cd446a5499 SHA256 eb896e1c7f183b6b44ced9a8993b852233c171c03b7ece4102d3995b10d14e4e
 MISC metadata.xml 228 RMD160 820953bda2722824a09a5e0f04202ea176f998a8 SHA1 a2ea8002d18670fd2e99436e95ed828ccbad3449 SHA256 1c99fc10a077ade0f317d434fcfdc6e7bf8de168e029392f68c847f71deca665
