@@ -3,11 +3,11 @@
 # $Header: $
 EAPI="4"
 
+DEPEND=">=sec-policy/selinux-apm-2.20110726"
+
 IUSE=""
-MODS="acpi"
-
-inherit selinux-policy-2
-
-DESCRIPTION="SELinux policy for acpi"
-
+DESCRIPTION="SELinux policy for ACPI (meta-package for apm)"
+HOMEPAGE="http://hardened.gentoo.org/selinux"
 KEYWORDS="~amd64 ~x86"
+SLOT="0"
+LICENSE="public-domain"
