@@ -1,4 +1,4 @@
 DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
-EBUILD selinux-apm-2.20110726.ebuild 237 RMD160 e17bf8912276f4b591b344af2908daa9c6400b8d SHA1 616c795ec9779e4b3b78250c3c39f26771251f27 SHA256 a62cadcfe35ddeb1e9b6edda1eaaf42608981ae4d17230413a202ca8db935308
-MISC ChangeLog 423 RMD160 28532f2eb1593d9d96524f6a89c788bbfb8b843d SHA1 16aa7099f44987589a875578b9ad30532d026073 SHA256 84cddb16b281452eac79d5f7a2c40ba420e6645acbbb34a384f063bc61091aef
+EBUILD selinux-apm-2.20110726.ebuild 329 RMD160 cb0f5a84d8329472f02a383bda9befbb34976938 SHA1 a20b82e2d5c77e9358f7fea37162d96b0004a5c4 SHA256 f5cf9293b8beb5952bda462febd84080088bbcc835258c92d1679100b2902bb7
+MISC ChangeLog 513 RMD160 1fff643808cc2b3db6549795e16abb8822b5508f SHA1 a8101682a1ba4f92f2af3bee247120b2a5c42348 SHA256 f5e61dd3d5f27c322a0f75618d66e92bf6285d86eb7b9427791dad210cf7d971
 MISC metadata.xml 227 RMD160 b0410ba4512415eae68c70604bb825e7188ab4e3 SHA1 537d0ae3704b2adac52df48ee0a94e73a1f1c5e5 SHA256 c4dbecc1821489f62a7580d39aeb48363c52c461f36379195e0c58d63a3193ec
