@@ -9,5 +9,6 @@ MODS="apm"
 inherit selinux-policy-2
 
 DESCRIPTION="SELinux policy for apm"
-
 KEYWORDS="~amd64 ~x86"
+DEPEND="=sec-policy/selinux-base-policy-2.20110726-r1
+	!<sec-policy/selinux-acpi-2.20110726"
