@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-apm/ChangeLog,v 1.2 2011/06/02 12:04:17 blueness Exp $
 
+  13 Aug 2011; <swift@gentoo.org> selinux-apm-2.20110726.ebuild:
+  Block on selinux-acpi
+
   02 Jun 2011; Anthony G. Basile <blueness@gentoo.org>
   selinux-apm-2.20101213.ebuild:
   Stable amd64 x86
